exo: set event targeting policy for aura::Window in exo.

ARC++ always creates an invisible screen sized shell surface
for system window. It blocks pointer events for other
windows behind it. In mus, other windows are living in other
mus clients (processes), the mus window server will dispatch
all pointer events to the invisible screen sized shell surface.
This CL sets event targeting policy for all aura::Window created
by exo appropriately, so the mus window server can dispatch
pointer events correctly.

Known issue: the cursor for ARC++ is not displayed correctly.

Bug: 757542
Change-Id: Iaa22e5e6c265dd5e48397f140b00dfb31af60c43
Reviewed-on: https://chromium-review.googlesource.com/667978
Reviewed-by: David Reveman <reveman@chromium.org>
Commit-Queue: Peng Huang <penghuang@chromium.org>
Cr-Commit-Position: refs/heads/master@{#502061}